# G171-Capstone

./: README.md  sineWaveOctave.txt  squareWaveOctave.txt  triangleWaveOctave.txt
Blink/: CMakeLists.txt  main.c
CAD/: keyboardSpacer.scad  keyboardSpacer.stl  switchSpacer.scad  switchSpacer.stl
LCD/: CMakeLists.txt  LCD.c  OLED.c  font.h  imageN.h  main.c
MCP23017/: CMakeLists.txt  MCP23017.c  MCP23017.h  main.c
SD/: CMakeLists.txt  hw_config.c
Synthesizer/: CMakeLists.txt  LCD.c  LCD.h  MCP23017.c  OLED.c  SD.c  SD.h  c4.h  hipass_coeffs.h  hw_config.c  lopass_coeffs.h  main.c  menuButtons.h  pico_button_matrix.c  pwm_audio_dma.c  pwm_audio_interrupt.c  pwm_audio_setup.c
Synthesizer/AudioProcessing/: ADSR_c.c  ADSR_c.h  biquad_pot.c  firDelayLine.c  fir_test.c  hipass_coeffs.h  lopass_coeffs.h
evans_stuff/: ADSR_c.c  ADSR_c.h  ADSR_plug_test.c  CMakeLists.txt  FIR_lo_400.h  FIR_lo_400_uint8_t.h  LUT.h  button_test.c  dac_test.c  intense_sample.h  main.c  sample.h
landonsCopy/: CMakeLists.txt  LCD.c  MCP23017.h  OLED.c  OLED.h  font24.h  hw_config.c  main.c  menuButtons.c  menuButtons.h  pico_button_matrix.c  pico_button_matrix.h
pwm_audio/: CMakeLists.txt  main.c  pwm_audio_interrupt.c  pwm_audio_setup.h
